# Cashierless-Vision

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  project-document.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yaml
configs/: cameras.yaml  pipeline.yaml  training.yaml
deployment/: Dockerfile.serving  Dockerfile.triton  docker-compose.yaml
deployment/triton_model_repository/detector_rtdetr/: config.pbtxt
deployment/triton_model_repository/detector_yolo/: config.pbtxt
deployment/triton_model_repository/ensemble_vision/: config.pbtxt
deployment/triton_model_repository/reid/: config.pbtxt
notebooks/: kaggle_train_cashierless.ipynb
runs/train/: args.yaml
src/data_engine/: auto_labeler.py  event_logger.py  hard_example_miner.py  retraining_trigger.py  review_queue.py
src/data_generation/: build_dataset.py  frame_sampler.py
src/models/: detector.py  evaluate.py  export.py  tracker.py  train.py
src/monitoring/: drift_detector.py
src/pipeline/: association.py  cart_state.py  orchestrator.py
src/serving/: app.py  schemas.py  triton_client.py
src/utils/: geometry.py  logger.py
tests/: test_core.py
